--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-leaflet": "^4.2.1",
     "react-live": "^3.1.2",
     "react-modal": "^3.16.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
