--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-modal": "^3.16.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-select": "^5.7.3",
     "react-simple-star-rating": "^5.1.7",
     "react-textarea-autosize": "^8.5.2",
@@ -107,7 +107,7 @@
   "devDependencies": {
     "@automattic/webpack-rtl-plugin": "^6.0.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@craco/craco": "^7.1.0",
+    "@craco/craco": "^5.9.0",
     "@craco/types": "^7.1.0",
     "@types/fslightbox-react": "^1.7.3",
     "@types/leaflet": "^1.9.3",
